Enum "emirates_enum" {
  "ABU_DHABI"
  "DUBAI"
  "SHARJAH"
  "AJMAN"
  "UMM_AL_QUWAIN"
  "RAS_AL_KHAIMAH"
  "FUJAIRAH"
}

Enum "otp_channel" {
  "phone"
  "email"
}

Enum "otp_purpose" {
  "signup"
  "login"
  "reset_password"
  "update_phone"
  "update_email"
}

Enum "permissions_enum" {
  "READ"
  "WRITE"
  "DELETE"
  "ALL"
}

Table "business" {
  "id" integer [pk, not null]
  "name" "character varying(255)" [not null]
  "vat_number" character(15) [unique, not null]
  "tl_number" "character varying(50)" [unique, not null]
  "emirate" emirates_enum [not null]
  "created_at" timestamp [not null, default: `now()`]
  "industry_id" smallint
}

Table "features" {
  "id" smallint [pk, not null]
  "name" "character varying(50)" [unique, not null]
  "description" "character varying(255)"
}

Table "industry" {
  "id" smallint [pk, not null]
  "name" "character varying(100)" [unique, not null]
  "code" "character varying(10)" [unique, not null]
}

Table "invitations" {
  "id" integer [pk, not null]
  "email" "character varying(255)" [not null]
  "token_hash" character(60) [not null]
  "expires_at" timestamp [not null]
  "accepted_at" timestamp
  "created_at" timestamp [not null, default: `now()`]
  "business_id" integer [not null]
  "invited_by" integer [not null]
  "role_id" smallint [not null]

  Indexes {
    (business_id, email) [unique, name: "UQ_e931a1da2f1daf11b0e7341a8f0"]
  }
}

Table "migrations" {
  "id" integer [pk, not null]
  "timestamp" bigint [not null]
  "name" "character varying" [not null]
}

Table "otp_verifications" {
  "id" integer [pk, not null]
  "channel" otp_channel [not null]
  "destination" "character varying(255)" [not null]
  "code_hash" character(60) [not null]
  "purpose" otp_purpose [not null]
  "expires_at" timestamp [not null]
  "attempts" smallint [not null, default: `'0'::smallint`]
  "max_attempts" smallint [not null, default: `'3'::smallint`]
  "verified_at" timestamp
  "created_at" timestamp [not null, default: `now()`]
  "user_id" integer
}

Table "roles" {
  "id" smallint [pk, not null]
  "name" "character varying(50)" [not null]
  "description" "character varying(255)"
  "business_id" integer
  "is_system" boolean [not null, default: false]

  Indexes {
    (business_id, name) [unique, name: "UQ_0e74e16197c67d69c515ae3b7ec"]
  }
}

Table "roles_permissions" {
  "role_id" smallint [not null]
  "feature_id" smallint [not null]
  "permission" permissions_enum [not null]

  Indexes {
    (role_id, feature_id) [pk, name: "PK_8713f831f04154b9f1231669c7d"]
  }
}

Table "user_roles" {
  "user_id" integer [not null]
  "role_id" smallint [not null]
  "assigned_at" timestamp [not null, default: `now()`]

  Indexes {
    (user_id, role_id) [pk, name: "PK_23ed6f04fe43066df08379fd034"]
  }
}

Table "users" {
  "id" integer [pk, not null]
  "name" "character varying(100)" [not null]
  "email" "character varying(255)" [unique, not null]
  "phone" "character varying(15)" [unique, not null]
  "password" character(60) [not null]
  "is_phone_verified" boolean [not null, default: false]
  "is_email_verified" boolean [not null, default: false]
  "created_at" timestamp [not null, default: `now()`]
  "business_id" integer
  "created_by" integer
}

Ref "":"users"."id" < "invitations"."invited_by"

Ref "FK_7d2dad9f14eddeb09c256fea719":"roles"."id" < "roles_permissions"."role_id" [delete: cascade]

Ref "FK_87b8888186ca9769c960e926870":"users"."id" < "user_roles"."user_id" [delete: cascade]

Ref "FK_b23c65e50a758245a33ee35fda1":"roles"."id" < "user_roles"."role_id" [delete: cascade]

Ref "FK_be94701bb578db1a8a295e6f7e8":"business"."id" < "invitations"."business_id"

Ref "FK_c7f1d281e1acc51e2a37889f5a9":"users"."id" < "otp_verifications"."user_id"

Ref "FK_cd750f8c7a7cb867515c3bbdb91":"business"."id" < "roles"."business_id"

Ref "FK_cde4b2aabca86cfabdc78b537f0":"business"."id" < "users"."business_id"

Ref "FK_d1277c8816988014f8cf9fac7b2":"industry"."id" < "business"."industry_id"

Ref "FK_d2eb360911576ee270445a8c800":"features"."id" < "roles_permissions"."feature_id" [delete: cascade]

Ref "FK_e4950c4d6aa2236f5213538e01a":"roles"."id" < "invitations"."role_id"

Ref "FK_f32b1cb14a9920477bcfd63df2c":"users"."id" < "users"."created_by"
